# osm-fieldwork

./: .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  CSVDump.py  Checks the_data_ispresent  Dockerfile  Doxyfile  LICENSE.md  Makefile  ODKDump.py  ODKForm.py  ODKInstance.py  OdkCentral.py  README.md  basemaper.py  basemapper.py  build_imgs.sh  convert.py  docker-compose.yml  entrypoint.sh  filter.yaml  icepark.yaml  index.html  make_data_extract.py  mkdocs.yml  objects.inv  odk2csv.py  odk_client.py  odk_merge.py  osmfile.py  outreachy.py  pyproject.toml  requirements.txt  sitemap.xml  sqlite.py  (+4 more)
.github/: labeler.yml
.github/workflows/: build-ci.yml  build.yml  docs.yml  publish.yml  pytest.yml  wiki.yml
CHANGELOG/: index.html
Code-of-Conduct/: index.html
LICENSE/: index.html
XForms/: Camping.xlsx  Campsite.xlsx  Emergency.xlsx  Makefile  RoadBarriers.xlsx  buildings.xls  buildings.xlsx  buildings.xml  businesses.xlsx  businesses.xml  cemeteries.xls  education.xls  healthcare.xls  highways.xls  highways.xlsx  highways.xml  infrastructure.xlsx  infrastructure.xml  landuse.xls  municipality.csv  parking_survey.xlsx  parking_survey.xml  place.xls  solidwaste.xlsx  solidwaste.xml  structure.xlsx  toilets.xls  towns.csv  transportation.xls  waste.xls  waste_collection.xlsx  waste_collection.xml  waterpoints.xls  waterpoints.xlsx  waterpoints.xml
about/: conflation.odg  conversion.odg
about/About/: index.html
about/CSVDump/: index.html
about/Contribution/: index.html
about/FAQ/: index.html
about/Troubleshooting/: index.html
about/basemapper/: index.html
about/configuring/: index.html
about/conflation/: index.html
about/convert/: index.html
about/externaldata/: index.html
about/json2osm/: index.html
about/make_data_extract/: index.html
about/odk-entities/: index.html
about/odk2csv/: index.html
about/odk2geojson/: index.html
about/odk2osm/: index.html
about/odk_client/: index.html
about/odk_merge/: index.html
about/osm2favorites/: index.html
about/osmfile/: index.html
about/programs/: index.html
about/user-manual/: index.html
about/xlsforms/: index.html
about/yamlfile/: index.html
api/CSVDump/: index.html
api/ODKForm/: index.html
api/ODKInstance/: index.html
api/OdkCentral/: index.html
api/OdkCentralAsync/: index.html
api/basemapper/: index.html
api/convert/: index.html
api/filter_data/: index.html
api/json2osm/: index.html
api/make_data_extract/: index.html
api/odk2csv/: index.html
api/odk2geojson/: index.html
api/odk2osm/: index.html
api/osmfile/: index.html
api/parsers/: index.html
api/sqlite/: index.html
api/update_xlsform/: index.html
api/yamlfile/: index.html
apidocs/html/: CSVDump_8py_source.html  ODKInstance_8py_source.html  OdkCentralAsync_8py_source.html  OdkCentral_8py_source.html  ____init_____8py_source.html  ____version_____8py_source.html  annotated.html  basemapper_8py_source.html  classes.html  classosm__fieldwork_1_1CSVDump_1_1CSVDump-members.html  classosm__fieldwork_1_1CSVDump_1_1CSVDump.html  classosm__fieldwork_1_1CSVDump_1_1CSVDump__coll__graph.dot  classosm__fieldwork_1_1CSVDump_1_1CSVDump_a2b51b6565b10dfcdb85c9014fe307ce7_cgraph.dot  classosm__fieldwork_1_1CSVDump_1_1CSVDump_aba74ef55c6d93f740a2426f2353bdcb4_icgraph.dot  classosm__fieldwork_1_1CSVDump_1_1CSVDump_ac00097ec888ebdb6cd3f263c924c1fdd_cgraph.dot  classosm__fieldwork_1_1CSVDump_1_1CSVDump_af835a1a700595d12df66ed2bdba56484_cgraph.dot  classosm__fieldwork_1_1CSVDump_1_1CSVDump_af835a1a700595d12df66ed2bdba56484_icgraph.dot  classosm__fieldwork_1_1CSVDump_1_1CSVDump_afb5140838f3603b12c19e1335fc31d07_cgraph.dot  classosm__fieldwork_1_1ODKForm_1_1ODKForm.html  classosm__fieldwork_1_1ODKForm_1_1ODKForm__coll__graph.dot  classosm__fieldwork_1_1ODKForm_1_1ODKForm_a3c2ed5aca7bccb45e2f08536fc3bc7ee_icgraph.dot  classosm__fieldwork_1_1ODKForm_1_1ODKForm_a57750d2c3ab11f1552a73bdacdf26081_cgraph.dot  classosm__fieldwork_1_1ODKForm_1_1ODKForm_aedb12432a787e03d39783babe10637db_cgraph.dot  classosm__fieldwork_1_1ODKInstance_1_1ODKInstance-members.html  (+197 more)
doc/: Makefile  configuring.md  externaldata.md  odk_client.md  programs.md  xlsforms.md
docs/: About.md  CSVDump.md  Code-of-Conduct.md  Contribution.md  FAQ.md  FAQs_and_Troubleshooting.md  Home.md  Makefile  ODKConvert.md  OdkCentral.md  Troubleshooting.md  Version-Control.md  _Sidebar.md  basemapper.md  configuring.md  conflation.md  convert.md  externaldata.md  gen_docs.sh  index.md  make_data_extract.md  mkdocs.yml  mkgendocs.yml  odk_client.md  odk_merge.md  osmfile.md  programs.md  user-manual.md  wiki_redirect.md  xlsforms.md  yamlfile.md
nginx/: odk.conf
odkconvert/: CSVDump.py  ODKDump.py  ODKForm.py  ODKInstance.py  OdkCentral.py  basemapper.py  convert.py  filter.yaml  filter_data.py  make_data_extract.py  mbase.py  odk2csv.py  odk_client.py  odk_merge.py  osmfile.py  sqlite.py  yamlfile.py
osm_fieldwork/: .#odk2osm.py  CSVDump.py  ODKDump.py  ODKForm.py  ODKInstance.py  OdkCentral.py  OdkCentralAsync.py  __version__.py  basemapper.py  boundary_handler_factory.py  boundary_handlers.py  convert.py  csvdump.py  filter_data.py  imagery.yaml  json2osm.py  jsondump.py  main.py  make_data_extract.py  models.yaml  odk2csv.py  odk2geojson.py  odk2osm.py  odk_client.py  odk_merge.py  odkjson2geojson.py  osm2favorities.py  osmfile.py  outreachy.py  parsers.py  shared_utils.py  sqlite.py  support.py  update_form.py  update_xlsform.py  xforms.yaml  yamlfile.py
search/: search_index.json
tests/: conftest.py  test_basemap.py  test_central.py  test_conflation.py  test_convert.py  test_csv.py  test_entities.py  test_odk_central.py  test_odk_submissions.py  test_osm.py  test_update_form.py  test_update_xlsform.py  test_uriparser.py  test_yaml.py
testsuite/: Test.yaml  dejagnu.py  test_convert.py  test_csv.py  test_osm.py  test_yaml.py  yamltest.py
ui/: __init__.py  buildozer.spec  main.py  osmfieldwork.kv
wiki/: Makefile  configuring.md  osm2favorites.md
wiki_redirect/: index.html
(+714 files in other folders)
