[project]
name = "osm-fieldwork"
dynamic = ["version"]
description = "Processing field data from OpenDataKit to OpenStreetMap format."
authors = [
    {name = "Rob Savoye", email = "rob.savoye@hotosm.org"},
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
]
dependencies = [
    "codetiming>=1.4.0",
    "epdb>=0.15.1",
    "geodex>=0.1.2",
    "geojson>=2.5.0",
    "progress>=1.6",
    "pymbtiles>=0.5.0",
    "PyYAML>=6.0",
    "qrcode>=7.4.2",
    "requests>=2.31.0",
    "segno>=1.5.2",
    "xmltodict>=0.13.0",
    "shapely>=1.8.5",
    "overpy>=0.6",
    "thefuzz>=0.19.0",
    "levenshtein>=0.21.1",
    "haversine>=2.8.0",
    "flatdict>=4.0.1",
    "ogr>=0.44.0",
    "mercantile>=1.2.1",
    "pySmartDL>=1.3.4",
    "pandas>=2.0.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["hot", "odk", "openstreetmap", "opendatakit", "fmtm"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/hotosm/osm-fieldwork/wiki"
documentation = "https://hotosm.github.io/osm-fieldwork"
repository = "https://github.com/hotosm/osm-fieldwork"

[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "osm_fieldwork"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.5"
version_files = [
    "pyproject.toml:version",
    "osm_fieldwork/__version__.py",
    "Makefile:VERSION",
    "build_imgs.sh:PKG_VERSION",
]

[tool.pdm]
version = {from = "osm_fieldwork/__version__.py"}
[tool.pdm.build]
includes = ["osm_fieldwork"]
source-includes = ["tests", "LICENSE.md", "README.md"]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "commitizen>=3.6.0",
    "pre-commit>=3.3.3",
]
debug = [
    "debugpy>=1.6.7.post1",
    "ipdb>=0.13.13",
]
test = [
    "pytest>=7.4.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.3",
    "mkdocstrings-python>=1.5.1",
    "mkdocs-exclude>=1.0.2",
]

[tool.black]
line-length = 132
target-versions = ["py310", "py311"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osm_fieldwork/__version__.py",
]
[tool.ruff.pydocstyle]
convention = "google"

[project.scripts]
json2osm = "osm_fieldwork.json2osm:main"
basemapper = "osm_fieldwork.basemapper:main"
osm2favorites = "osm_fieldwork.osm2favorities:main"
csv2osm = "osm_fieldwork.CSVDump:main"
odk2csv = "osm_fieldwork.odk2csv:main"
odk2osm = "osm_fieldwork.odk2osm:main"
odk2geojson = "osm_fieldwork.odk2geojson:main"
odk_merge = "osm_fieldwork.odk_merge:main"
odk_client = "osm_fieldwork.odk_client:main"
make_data_extract = "osm_fieldwork.make_data_extract:main"
