[project]
name = "osm-fieldwork"
dynamic = ["version"]
description = "Processing field data from ODK to OpenStreetMap format."
authors = [
    {name = "Rob Savoye", email = "rob.savoye@hotosm.org"},
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
]
dependencies = [
    "codetiming>=1.3.0",
    "geojson>=2.5.0",
    "progress>=1.6",
    "PyYAML>=6.0.0",
    "segno>=1.5.2",
    "xmltodict>=0.13.0",
    "shapely>=1.8.5",
    "thefuzz>=0.19.0",
    # levenshtein used by thefuzz underneath (do not remove)
    "levenshtein>=0.20.0",
    "haversine>=2.8.0",
    "flatdict>=4.0.1",
    "mercantile>=1.2.1",
    "pySmartDL>=1.3.4",
    "pandas>=1.5.0",
    "py-cpuinfo>=9.0.0",
    "requests>=2.26.0",
    "pmtiles>=3.2.0",
    "osm-rawdata>=0.1.7",
]
requires-python = ">=3.10"
readme = "README.md"
license = "GPL-3.0-only"
keywords = ["hot", "odk", "openstreetmap", "fmtm"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/hotosm/osm-fieldwork/wiki"
documentation = "https://hotosm.github.io/osm-fieldwork"
repository = "https://github.com/hotosm/osm-fieldwork"

[build-system]
requires = ["pdm-pep517>=1.1.4"]
build-backend = "pdm.pep517.api"

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = [
    "tests",
]
pythonpath = "osm_fieldwork"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.5.4"
version_files = [
    "pyproject.toml:version",
    "osm_fieldwork/__version__.py",
    "Makefile:VERSION",
]
update_changelog_on_bump = true

[tool.pdm]
version = {from = "osm_fieldwork/__version__.py"}
[tool.pdm.build]
includes = ["osm_fieldwork"]
source-includes = ["LICENSE.md", "README.md"]
excludes = ["osm_fieldwork/*.db", "osm_fieldwork/*.sql"]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "commitizen>=3.6.0",
    "pre-commit>=3.3.3",
]
debug = [
    "debugpy>=1.6.7.post1",
    "ipdb>=0.13.13",
    "epdb>=0.15.1",
]
test = [
    "pytest>=7.4.0",
]
docs = [
    "mkdocs>=1.5.2",
    "mkdocs-material>=9.2.3",
    "mkdocstrings-python>=1.5.1",
    "mkdocs-exclude>=1.0.2",
]
ui = [
    "kivy[base]>=2.2.1",
    "kivymd @ https://github.com/kivymd/KivyMD/archive/master.zip",
    "plyer>=2.1.0",
    "androidstorage4kivy>=0.1.1",
]

[tool.black]
line-length = 132
target-versions = ["py310", "py311"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py310"
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]
ignore = ["N805", "B008"]
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osm_fieldwork/__version__.py",
]
[tool.ruff.pydocstyle]
convention = "google"
[tool.ruff.per-file-ignores]
"osm_fieldwork/basemapper.py" = ["N802"]

[project.scripts]
json2osm = "osm_fieldwork.json2osm:main"
basemapper = "osm_fieldwork.basemapper:main"
osm2favorites = "osm_fieldwork.osm2favorities:main"
csv2osm = "osm_fieldwork.CSVDump:main"
odk2csv = "osm_fieldwork.odk2csv:main"
odk2osm = "osm_fieldwork.odk2osm:main"
odk2geojson = "osm_fieldwork.odk2geojson:main"
odk_merge = "osm_fieldwork.odk_merge:main"
odk_client = "osm_fieldwork.odk_client:main"
make_data_extract = "osm_fieldwork.make_data_extract:main"
